pollingWithTimestamp/kubernetes/authentication-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: authentication-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            name: authentication
    template:
        metadata:
            labels:
                name: authentication
        spec:
            containers:
                - name: authentication
                  image: coffee51/authentication
