pollingWithTimestamp/kubernetes/authentication-mongo-service.yml
apiVersion: v1
kind: Service
metadata: 
    name: authentication-mongo-service
spec:
    selector:
      name: authentication-mongo
    ports:
        - name: mongo-db
          protocol: TCP
          port: 27017
          targetPort: 27017
