pollingWithTimestamp/kubernetes/query-mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: query-mongo-service
spec:
  selector:
    name: query-mongo
  ports:
    - name: mongo-db
      protocol: TCP
      port: 27017
      targetPort: 27017
